<?xml version="1.0"?>
<package format="3">
  <name>livestreaming_cpp</name>
  <version>1.0.0</version>
  <description>ROS2 WebRTC streaming using GStreamer</description>

  <maintainer email="pruthvi@bullworkmobility.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>isaac_ros_managed_nitros</depend>
  <depend>isaac_ros_nitros_image_type</depend>
  <depend>isaac_ros_common</depend>
  <depend>websocketpp</depend>


  <!-- Optional: keep only if you actually use it elsewhere -->
  <!-- <depend>cv_bridge</depend> -->

  <exec_depend>gstreamer1.0</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
